--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "rmwc": "^1.3.0"
+    "rmwc": "^1.3.0",
+    "ccpwgl": "https://github.com/ccpgames/ccpwgl.git"
   },
   "scripts": {
     "start": "react-scripts start",
